# rte-rrtmgp

./: .cmake-format.py  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CMakeLists.txt  Compiler-flags.md  Contributing.md  Gemfile  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  README_TESTS_ERIK.txt  Tutorials.html  aclocal.m4  autogen.sh  azure-pipelines.yml  cbind_generator.py  codecov.yml  common.cmake  configure  configure.ac  environment-ci.yml  environment-dev.yml  environment-noplots.yml  environment.yml  explanations.html  feed.xml  howtos.html  index.html  nersc.gitlab-ci.yml  pyproject.toml  reference.html  setup.sh  tests.cmake  tutorials.html
cpp/: CMakeLists.txt  README.md  const.h  conversion.h  rrtmgp_const.h  rrtmgp_conversion.h  yakl-git-hash.txt
cpp/examples/: mo_load_coefficients.cpp  mo_load_coefficients.h
cpp/rrtmgp/: mo_gas_concentrations.h  mo_gas_optics_rrtmgp.h  mo_rrtmgp_constants.cpp  mo_rrtmgp_constants.h  mo_rrtmgp_util_reorder.cpp  mo_rrtmgp_util_reorder.h  mo_rrtmgp_util_string.h
cpp/rte/: expand_and_transpose.cpp  expand_and_transpose.h  mo_fluxes.h  mo_optical_props.h  mo_rte_lw.cpp  mo_rte_lw.h  mo_rte_sw.cpp  mo_rte_sw.h  mo_source_functions.h
cpp/test/: CMakeLists.txt  README.md  cmakeclean.sh  cmakescript.sh  fhqwhgads_cpu.sh  fhqwhgads_debug.sh  fhqwhgads_gpu.sh  get_data.sh  lyra_cpu.sh  lyra_gpu.sh  macbook.sh  run_test.sh  scrollbuttons_cpu.sh  scrollbuttons_debug.sh  summit_cpu.sh  summit_gpu.sh  test_lw.sh  test_lw_r.sh  test_sw.sh  test_sw_r.sh  thatchroof_cpu.sh  thatchroof_debug.sh  thatchroof_gpu.sh  thatchroof_gpu_debug.sh  tulip_cpu.sh  tulip_gpu.sh
examples/: CMakeLists.txt  Makefile.am  Makefile.in  compare-to-reference.py  mo_garand_atmos_io.F90  mo_load_coefficients.F90  mo_simple_netcdf.F90  rfmip-clear-sky.test.in
examples/all-sky/: CMakeLists.txt  Makefile  README.md  README_ERIK_ALLSKY.txt  all-sky.test.in  all_tests.sh  compare-to-reference.py  garand-atmos-1.nc  make_problem_size_loop.py  mo_garand_atmos_io.F90  mo_load_aerosol_coefficients.F90  mo_load_cloud_coefficients.F90  rrtmgp-allsky.nc  rrtmgp_allsky.F90  run-allsky-example.py
examples/garand-atmospheres/: Makefile  garand-atmos  mo_garand_atmos_io.F90  rrtmgp_garand_atmos  rrtmgp_garand_atmos.F90
examples/rfmip-clear-sky/: CMakeLists.txt  Makefile  Makefile.libs.macos  Makefile.libs.olcf  Makefile.libs.pgfortran-cscs  README_ERIK_LW.txt  README_ERIK_SW.txt  Readme.md  compare-to-reference.py  mo_load_coefficients.F90  mo_rfmip_io.F90  rfmip-clear-sky.test.in  rrtmgp_rfmip_lw.F90  rrtmgp_rfmip_sw.F90  run-rfmip-examples.py  stage_files.py  stage_files.sh
examples/rte-examples/: CMakeLists.txt  Readme.md  mo_rte_examples_io.F90  rte_examples.F90
examples/shared-utils/: CMakeLists.txt  mo_simple_netcdf.F90  mo_testing_utils.F90
rrtmgp/: CMakeLists.txt  Make.depends  Makefile.am  Makefile.in  mo_gas_concentrations.F90  mo_gas_optics.F90  mo_gas_optics_rrtmgp.F90  mo_rrtmgp_constants.F90  mo_rrtmgp_util_reorder.F90  mo_rrtmgp_util_reorder_kernels.F90  mo_rrtmgp_util_string.F90  mo_util_reorder.F90  mo_util_string.F90
rrtmgp-frontend/: CMakeLists.txt  Make.depends  mo_aerosol_optics_rrtmgp_merra.F90  mo_cloud_optics.F90  mo_cloud_optics_rrtmgp.F90  mo_gas_concentrations.F90  mo_gas_optics_rrtmgp.F90
rrtmgp-kernels/: CMakeLists.txt  Make.depends  mo_cloud_optics_rrtmgp_kernels.F90  mo_gas_optics_rrtmgp_kernels.F90
rrtmgp-kernels/accel/: mo_gas_optics_kernels.F90  mo_gas_optics_rrtmgp_kernels.F90
rrtmgp-kernels/api/: mo_cloud_optics_rrtmgp_kernels.F90  mo_gas_optics_rrtmgp_kernels.F90  rrtmgp_kernels.h
rrtmgp-kernels/cuda/: mo_gas_optics_rrtmgp_kernels.F90
rrtmgp/data/: README.md  create_optimal_angle_nc.py  create_optimal_single_angle_nc.py  sec_t_fit_coeffs.csv  sec_t_fit_coeffs.nc
rrtmgp/data-loading-examples/: CMakeLists.txt  mo_load_cloud_coefficients.F90  mo_optics_utils_rrtmgp.F90
rrtmgp/frontend/: CMakeLists.txt  mo_aerosol_optics_rrtmgp_merra.F90  mo_cloud_optics_rrtmgp.F90  mo_gas_optics_rrtmgp.F90
rrtmgp/kernels/: CMakeLists.txt  mo_cloud_optics_rrtmgp_kernels.F90  mo_gas_optics_kernels.F90  mo_reorder_kernels.F90  mo_rrtmgp_util_reorder_kernels.F90
rrtmgp/kernels-default/: mo_gas_optics_kernels.F90
rrtmgp/kernels-openacc/: mo_gas_optics_kernels.F90  mo_reorder_kernels.F90
rte/: Make.depends  Makefile.am  Makefile.in  mo_fluxes.F90  mo_fluxes_broadband_kernels.F90  mo_optical_props.F90  mo_optical_props_add.F90  mo_rte_config.F90  mo_rte_kind.F90  mo_rte_lw.F90  mo_rte_sw.F90  mo_rte_util_array.F90  mo_source_functions.F90  mo_util_array.F90
rte-frontend/: CMakeLists.txt  Make.depends  mo_fluxes.F90  mo_gas_concentrations.F90  mo_gas_optics.F90  mo_optical_props.F90  mo_rte_lw.F90  mo_rte_sw.F90  mo_rte_util_array.F90  mo_rte_util_array_validation.F90  mo_source_functions.F90
rte-kernels/: CMakeLists.txt  Make.depends  mo_rte_kind.F90  mo_rte_solver_kernels.F90  mo_rte_util_array.F90
rte-kernels/accel/: mo_optical_props_kernels.F90  (+1 more)
ssm/: CMakeLists.txt  mo_gas_optics_ssm_kernels.F90  mo_optics_ssm.F90  mo_optics_ssm_kernels.F90  mo_ssm_gas_optics.F90
testing-utils/: CMakeLists.txt  mo_optics_utils_rrtmgp.F90  mo_optics_utils_ssm.F90  mo_simple_netcdf.F90
tests/: CMakeLists.txt  Makefile  Readme.md  all_tests.sh  check_equivalence.F90  check_equivalence.test.in  check_variants.F90  check_variants.test.in  clear_sky_regression.F90  clear_sky_regression.test.in  cloud_scattering.F90  cloud_scattering_ref.nc  compare-to-reference.py  crash_reproducer.F90  intel-codecov.sh  mo_comparisons.F90  mo_gas_optics_defs_rrtmgp.F90  mo_optics_defs_ssm.F90  mo_rcemip_profiles.F90  mo_testing_io.F90  mo_testing_utils.F90  optical_prop_unit_tests.F90  prepare_inputs.test.in  rte_check_equivalence.F90  rte_lw_solver_unit_tests.F90  rte_optic_prop_unit_tests.F90  rte_sw_solver_unit_tests  rte_sw_solver_unit_tests.F90  rte_unit_tests.F90  test_zenith_angle_spherical_correction.F90  test_zenith_angle_spherical_correction.test.in  validation-plots.py  verification.py
(+986 files in other folders)
